# Xerox

./: .gitattributes  .gitignore  MANIFEST.in  README.md  cloner.py  install.bat  install.command  install.ps1  install.sh  pyproject.toml  xerox  xerox.bat  xerox.ps1  xerox.py
.github/workflows/: ci.yml
scripts/: bootstrap.py  ci_smoke.py
xerox_app/: __main__.py  preflight.py  runtime.py  state.py  web.py
xerox_app/ui/: app.css  app.js  index.html
xerox_app/ui/cobalt/assets/: 04a63f8d54.js  070d6e622f.js  08ac64bd13.js  0af5888717.js  0afba1c21a.js  0d51472251.js  19fe4b711c.js  1a55a90470.css  1a776a2f4d.js  1abf4f2833.js  1d52e35902.js  2319d60c04.js  2c0c9517ef.css  3187a95248.js  3a631c73a8.js  3a9717f486.js  414fd65127.css  468acf99f9.js  46a92264ac.js  4725c1215c.js  48ff7496f4.js  49f2059cd9.js  50657068c4.js  5243f0e39f.js  52695c5b6d.js  5695e54de4.js  588ee5d387.js  590b5a320c.js  5b39a6e033.js  6162da7b84.js  625e6fdd8a.css  63aeb941e1.css  6a52cc9e11.js  6ad92d731c.js  6bb7b4b590.js  6ffb7ae8b9.js  78dd0420a0.js  793c85a391.js  7a939d84a0.js  7c0ac64c0d.css  (+48 more)
