[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xerox"
version = "0.1.3"
description = "Local website cloner with a minimal web UI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "legitsdev" },
]
keywords = ["cloner", "playwright", "website", "crawler", "ui"]
dependencies = [
  "beautifulsoup4",
  "fastapi",
  "playwright",
  "requests",
  "uvicorn",
]

[project.urls]
Repository = "https://github.com/legitsdev/Xerox"
Issues = "https://github.com/legitsdev/Xerox/issues"

[project.scripts]
xerox = "xerox_app.__main__:main"

[tool.setuptools]
py-modules = ["cloner", "xerox"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["xerox_app*"]

[tool.setuptools.package-data]
xerox_app = ["ui/*", "ui/**/*", "ui/**/**/*", "ui/**/**/**/*"]
